# icebear

./: Cargo.toml  Dockerfile  README.md
data/: text_01.csv
src/: collector.rs  main.rs  tables.rs
