[package]
name = "icebear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphene-sys = { version = "0.17.0" }
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_6"] }
polars = { version = "0.28.0", features = ["parquet", "dtype-full"] }
polars-sql = { version = "0.28.0" }
polars-lazy = { version = "0.28.0" }

